--- a/modules/deliveryman/deliveryman_main.ui
+++ b/modules/deliveryman/deliveryman_main.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>deliverman</class>
- <widget class="QWidget" name="deliverman">
+ <class>deliveryman_main</class>
+ <widget class="QWidget" name="deliveryman_main">
   <property name="geometry">
    <rect>
     <x>0</x>
