--- a/modules/user/user_sendout.ui
+++ b/modules/user/user_sendout.ui
@@ -395,7 +395,7 @@
      <x>10</x>
      <y>540</y>
      <width>495</width>
-     <height>39</height>
+     <height>40</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_8">
@@ -477,7 +477,7 @@
         </string>
       </property>
       <property name="text">
-       <string>返回主界面</string>
+       <string>返回上一级</string>
       </property>
      </widget>
     </item>
