user前两个功能

--- a/modules/user/user_search_delivery.ui
+++ b/modules/user/user_search_delivery.ui
@@ -282,7 +282,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="queryBtn">
+      <widget class="QPushButton" name="searchBtn">
        <property name="text">
         <string>查询</string>
        </property>
