--- a/modules/user/user_sendout.ui
+++ b/modules/user/user_sendout.ui
@@ -63,7 +63,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="lineEdit_name1"/>
        </item>
        <item>
         <widget class="QLabel" name="label_2">
@@ -73,7 +73,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit_2"/>
+        <widget class="QLineEdit" name="lineEdit_phone1"/>
        </item>
       </layout>
      </item>
@@ -93,25 +93,10 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="comboBox_province1">
          <item>
           <property name="text">
-           <string>测试1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>3</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>4</string>
+           <string/>
           </property>
          </item>
         </widget>
@@ -130,28 +115,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox_2">
-         <item>
-          <property name="text">
-           <string>测试1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>3</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>4</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="comboBox_city1"/>
        </item>
       </layout>
      </item>
@@ -165,7 +129,7 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit_3"/>
+        <widget class="QLineEdit" name="lineEdit_address1"/>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_in_address_book">
@@ -175,7 +139,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBox_address_book"/>
+        <widget class="QComboBox" name="comboBox_addressBook1"/>
        </item>
       </layout>
      </item>
@@ -231,7 +195,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit_4"/>
+        <widget class="QLineEdit" name="lineEdit_name2"/>
        </item>
        <item>
         <widget class="QLabel" name="label_7">
@@ -241,7 +205,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit_5"/>
+        <widget class="QLineEdit" name="lineEdit_phone2"/>
        </item>
       </layout>
      </item>
@@ -261,25 +225,10 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox_3">
+        <widget class="QComboBox" name="comboBox_province2">
          <item>
           <property name="text">
-           <string>测试1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>3</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>4</string>
+           <string/>
           </property>
          </item>
         </widget>
@@ -298,35 +247,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="comboBox_4">
-         <item>
-          <property name="text">
-           <string>测试1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>2</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>3</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>4</string>
-          </property>
-         </item>
-        </widget>
+        <widget class="QComboBox" name="comboBox_city2"/>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="1">
-        <widget class="QLineEdit" name="lineEdit_6"/>
+        <widget class="QLineEdit" name="lineEdit_address2"/>
        </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label_10">
@@ -343,7 +271,7 @@
         </widget>
        </item>
        <item row="1" column="1">
-        <widget class="QComboBox" name="comboBox_address_book"/>
+        <widget class="QComboBox" name="comboBox_addressBook2"/>
        </item>
       </layout>
      </item>
@@ -376,7 +304,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="lineEdit_7">
+     <widget class="QLineEdit" name="lineEdit_extra">
       <property name="styleSheet">
        <string notr="true">  QLineEdit {
                 padding: 8px;
