--- a/modules/deliveryman/deliveryman_main.ui
+++ b/modules/deliveryman/deliveryman_main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>547</width>
-    <height>504</height>
+    <width>607</width>
+    <height>543</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>521</width>
-     <height>481</height>
+     <width>581</width>
+     <height>521</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -97,7 +97,7 @@
    <widget class="QPushButton" name="quitBtn">
     <property name="geometry">
      <rect>
-      <x>404</x>
+      <x>460</x>
       <y>20</y>
       <width>101</width>
       <height>31</height>
@@ -111,7 +111,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
+      <y>150</y>
       <width>421</width>
       <height>301</height>
      </rect>
@@ -194,7 +194,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>380</y>
+      <y>460</y>
       <width>421</width>
       <height>40</height>
      </rect>
@@ -208,7 +208,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="curPosition"/>
      </item>
      <item>
       <widget class="QLabel" name="label_2">
@@ -241,8 +241,8 @@
    <widget class="QPushButton" name="confirmBtn">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>430</y>
+      <x>450</x>
+      <y>470</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -250,6 +250,54 @@
     <property name="text">
      <string>确认更改</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>421</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_4">
+       <property name="text">
+        <string>快递单号：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="parcelIdInput">
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}</string>
+       </property>
+       <property name="placeholderText">
+        <string>请输入快递单号</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="searchBtn">
+       <property name="text">
+        <string>查询</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
  </widget>
