--- a/modules/user/user_modify_info.ui
+++ b/modules/user/user_modify_info.ui
@@ -61,7 +61,7 @@
       <item row="4" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="btn_viewAddressBook">
           <property name="text">
            <string>点击查看地址簿信息</string>
           </property>
@@ -127,16 +127,9 @@
       <item row="1" column="1">
        <layout class="QGridLayout" name="gridLayout">
         <item row="1" column="1">
-         <widget class="QLineEdit" name="new_password_lineedit">
+         <widget class="QLineEdit" name="lineEdit_newPassword">
           <property name="echoMode">
            <enum>QLineEdit::PasswordEchoOnEdit</enum>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QPushButton" name="btn_change_password">
-          <property name="text">
-           <string>修改密码</string>
           </property>
          </widget>
         </item>
@@ -148,10 +141,10 @@
          </widget>
         </item>
         <item row="3" column="1">
-         <widget class="QLineEdit" name="new_phone_lineedit"/>
+         <widget class="QLineEdit" name="lineEdit_newPhone"/>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="old_password_lineedit">
+         <widget class="QLineEdit" name="lineEdit_oldPassword">
           <property name="echoMode">
            <enum>QLineEdit::PasswordEchoOnEdit</enum>
           </property>
@@ -165,7 +158,7 @@
          </widget>
         </item>
         <item row="3" column="2">
-         <widget class="QPushButton" name="btn_change_phone">
+         <widget class="QPushButton" name="btn_changePhone">
           <property name="text">
            <string>修改手机号</string>
           </property>
@@ -181,12 +174,19 @@
         <item row="2" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>旧手机号:</string>
+           <string>新密码：</string>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="lineEdit_againPassword"/>
+        </item>
+        <item row="2" column="2">
+         <widget class="QPushButton" name="btn_changePassword">
+          <property name="text">
+           <string>修改密码</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
