--- a/modules/user/user_main.ui
+++ b/modules/user/user_main.ui
@@ -66,7 +66,7 @@
        </widget>
       </item>
       <item row="4" column="1">
-       <widget class="QPushButton" name="searchBtn">
+       <widget class="QPushButton" name="queryBtn">
         <property name="text">
          <string>我要查快递</string>
         </property>
