--- a/modules/admin/admin_search_postman.ui
+++ b/modules/admin/admin_search_postman.ui
@@ -108,7 +108,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>100</y>
+      <y>120</y>
       <width>521</width>
       <height>341</height>
      </rect>
@@ -211,7 +211,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>40</y>
+      <y>60</y>
       <width>511</width>
       <height>40</height>
      </rect>
@@ -253,6 +253,19 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="returnBtn">
+    <property name="geometry">
+     <rect>
+      <x>423</x>
+      <y>10</y>
+      <width>111</width>
+      <height>37</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>返回上一级</string>
+    </property>
    </widget>
   </widget>
  </widget>
