--- a/modules/admin/admin_manage_deliveryman.ui
+++ b/modules/admin/admin_manage_deliveryman.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>881</width>
-    <height>631</height>
+    <width>1014</width>
+    <height>763</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -97,8 +97,8 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>861</width>
-     <height>611</height>
+     <width>991</width>
+     <height>461</height>
     </rect>
    </property>
    <property name="title">
@@ -107,8 +107,8 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>30</y>
+      <x>130</x>
+      <y>110</y>
       <width>721</width>
       <height>341</height>
      </rect>
@@ -217,11 +217,173 @@
      </property>
     </column>
    </widget>
+   <widget class="QPushButton" name="returnBtn">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>10</y>
+      <width>121</width>
+      <height>37</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>返回上一级</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget_4">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>60</y>
+      <width>631</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QLabel" name="label_10">
+       <property name="text">
+        <string>工号：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="workIdInput_3"/>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_11">
+       <property name="text">
+        <string>工作点：</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="workCity_2"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="searchBtn_2">
+       <property name="text">
+        <string>查询</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_2">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>480</y>
+     <width>991</width>
+     <height>271</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>选择表单中的员工信息在下方修改</string>
+   </property>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>380</y>
+      <x>90</x>
+      <y>210</y>
+      <width>821</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Minimum</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="createBtn">
+       <property name="text">
+        <string>新建员工信息</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="updBtn">
+       <property name="text">
+        <string>修改员工信息</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Preferred</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="delBtn">
+       <property name="text">
+        <string>删除员工信息</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Minimum</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>40</y>
       <width>821</width>
       <height>40</height>
      </rect>
@@ -235,7 +397,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input1_lineedit"/>
+      <widget class="QLineEdit" name="workIdInput"/>
      </item>
      <item>
       <widget class="QLabel" name="label_3">
@@ -245,15 +407,15 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input1_lineedit_2"/>
+      <widget class="QLineEdit" name="pwdInput"/>
      </item>
     </layout>
    </widget>
    <widget class="QWidget" name="layoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>430</y>
+      <x>90</x>
+      <y>90</y>
       <width>821</width>
       <height>40</height>
      </rect>
@@ -267,7 +429,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input1_lineedit_3"/>
+      <widget class="QLineEdit" name="nameInput"/>
      </item>
      <item>
       <widget class="QLabel" name="label_5">
@@ -277,7 +439,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input2_lineedit_2"/>
+      <widget class="QLineEdit" name="telInput"/>
      </item>
      <item>
       <widget class="QLabel" name="label_6">
@@ -287,16 +449,16 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input1_lineedit_4"/>
+      <widget class="QLineEdit" name="ageInput"/>
      </item>
     </layout>
    </widget>
    <widget class="QWidget" name="layoutWidget_3">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>490</y>
-      <width>581</width>
+      <x>90</x>
+      <y>150</y>
+      <width>821</width>
       <height>40</height>
      </rect>
     </property>
@@ -309,7 +471,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input1_lineedit_5"/>
+      <widget class="QLineEdit" name="workCityInput1"/>
      </item>
      <item>
       <widget class="QLabel" name="label_8">
@@ -319,57 +481,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="input2_lineedit_3"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>550</y>
-      <width>581</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <item>
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>工作点1：</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="comboBox"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_4">
-       <property name="text">
-        <string>查询</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>新建</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>修改</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_3">
-       <property name="text">
-        <string>删除</string>
-       </property>
-      </widget>
+      <widget class="QLineEdit" name="workCityInput2"/>
      </item>
     </layout>
    </widget>
